# ProgettoIIW

./: CMakeLists.txt
ClientFolder/: client  client_udp.c  common.c  packet_functions.c  types.h
ServerFolder/: basic.h  common.c  common.h  data_types.h  packet_functions.c  packet_functions.h  server  server_udp.c  thread_functions.c  timer_functions.c  window_operations.c
